2013-08-22  Ryosuke Niwa  <rniwa@webkit.org>

        Actually, this test is failing on Debug builds as well.
        Update the test expectation accordingly.

        * platform/mac-wk2/TestExpectations:

2013-08-22  Ryosuke Niwa  <rniwa@webkit.org>

        Add the failing test expectation to webaudio/codec-tests/mp3/128kbps-44khz.html on Lion Release WK2.
        The failure is tracked by the bug 120161.

        * platform/mac-wk2/TestExpectations:

2013-08-22  Rob Buis  <rwlbuis@webkit.org>

        REGRESSION: Assertion failure !collection->hasExactlyOneItem() in WebCore::namedItemGetter
        https://bugs.webkit.org/show_bug.cgi?id=118056

        Reviewed by Ryosuke Niwa.

        Add test to verify that SVG and HTML elements with id's are both found when using document.all or named properties.

        * svg/custom/document-all-includes-svg-expected.txt: Added.
        * svg/custom/document-all-includes-svg.html: Added.
        * svg/custom/window-named-item-lookup-expected.txt: Added.
        * svg/custom/window-named-item-lookup.html: Added.

2013-08-22  Renata Hodovan  <reni@webkit.org>

        ASSERTION FAILED: extractedStyle in WebCore::ApplyStyleCommand::removeInlineStyleFromElement
        https://bugs.webkit.org/show_bug.cgi?id=119672

        Reviewed by Darin Adler.

        Test with NULL extractedStyle.

        * editing/execCommand/extracted_style_assert-expected.txt: Added.
        * editing/execCommand/extracted_style_assert.html: Added.

2013-08-08  Sergio Villar Senin  <svillar@igalia.com>

        [CSS Grid Layout] Refactor testing code
        https://bugs.webkit.org/show_bug.cgi?id=119552

        Reviewed by Darin Adler.

        Based on Blink r148922 & r149060 by <jchaffraix@chromium.org>

        The old testing code was a huge copy&paste of big testing code
        blocks. Refactor it in some new utility functions so that we could
        reduce the size of the layout test file and ease the maintenance.
