@@ -1,0 +1,29 @@
+Test for [CSSRegions] Min-width and max-width for a region should support values other than length.
+
+On success you should see PASS below
+
+region1
+region2
+region3
+region4
+region5
+region6
+region7
+region8
+region9
+region10
+region11
+region12
+region1region2region3region4region5region6region7region8region9region10region11region12
+PASS
+PASS
+PASS
+PASS
+PASS
+PASS
+PASS
+PASS
+PASS
+PASS
+PASS
+PASS
